docの再進化
